--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ onload = function()
         bios: { url: "seabios.bin" },
         vga_bios: { url: "vgabios.bin" },
         hda: {
-            url: "winxp.img",
+            url: "https://download1503.mediafire.com/myc3vfyau3jgEwE5PRpN878-xIOkXM3Y4zbY0f3a2CQaZYHqA7pMVir3VF-AT9QZGgcQVXpSJdX5kBqzHQRgipXArG0FwEtF0RbgiVbqswNnY_wIzyQ6xkDW8ER5T07puFeNqa2_7F4txM0QCRANQQyJmvofwIGJwcupfqcWVzTLaA/00et3jcyppka4uf/winxp.img",
             size: 2 * 1024 * 1024 * 1024,
             async: true
         },
